--- a/sdkjs-plugins/content/insertQR/resources/style.css
+++ b/sdkjs-plugins/content/insertQR/resources/style.css
@@ -6,12 +6,16 @@ body {
 body {
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
-  width:100%;
-  height:100%;
+  background-color: #f5f5f5;
+}
+
+.container {
   display: flex;
   flex-flow: column;
-  background-color: #f5f5f5;
+  height: 100vh;
+  /* Set container height to 100% of viewport height */
+  overflow-y: auto;
+  /* Enable vertical scrolling */
 }
 
 .form {
@@ -26,10 +30,10 @@ body {
   height: auto;
   padding: 5px;
   font-size: 16px;
-  
-  
+
+
 }
+
 .form .form-control:focus {
   z-index: 2;
 }
-
